# penaltyblog

./: .coveragerc  .gitignore  .pre-commit-config.yaml  .readthedocs.yml  LICENCE  MANIFEST.in  Makefile  README.md  context7.json  demo_new_methods.py  demo_simplified_api.py  llms.txt  mypy.ini  pyproject.toml  pytest.ini  scratch.ipynb  scratch.py  setup.cfg  setup.py  test.json  test_improved_api_examples.py  test_kwargs.py  tests_tmp_corrupt_xt.npz  wget-log
.github/scripts/: generate_llms_penaltyblog.py
.github/workflows/: build_wheels.yml  coverage.yml  publish.yml  test.yml  update-llms-txt.yml
_build/: .buildinfo  genindex.html  index.html  objects.inv  search.html  searchindex.js
_build/.doctrees/: environment.pickle  index.doctree
_build/_modules/: index.html
_build/_static/: pygments.css
_build/backtest/: backtest.html  backtest.ipynb  index.html
_build/changelog/: index.html
_build/fpl/: fpl.html  index.html
_build/implied/: implied.html  implied.ipynb  index.html
_build/install/: index.html
_build/kelly/: criterion.html  index.html
_build/metrics/: index.html  rps.html  rps.ipynb
_build/models/: bivariate_poisson.html  dixon_coles.html  goal_expectancy.html  goal_expectancy.ipynb  index.html  negative_binomial.html  negative_binomial.ipynb  poisson.html  time_weighting.html  time_weighting.ipynb  weibull_copula.html  zero_inflated_poisson.html
_build/ratings/: colley_ratings.html  elo_ratings.html  index.html  massey_ratings.html
_build/references/: index.html
_build/scrapers/: clubelo.html  fbref.html  footballdata.html  index.html  understat.html
docs/: api.rst  conf.py  index.ipynb  index.rst  intro.rst  requirements.txt
docs/agent/: index.rst
docs/api/: backtest.rst  betting.rst  implied.rst  index.rst  kelly.rst  matchflow.rst  metrics.rst  models.rst  ratings.rst  scrapers.rst  viz.rst  xt.rst
docs/api_reference/: index.rst
docs/backtest/: backtest.ipynb  index.rst
docs/betting/: arbitrage.ipynb  arbitrage_hedging.ipynb  arbitrage_hedging.rst  arbitrage_opportunities.ipynb  arbitrage_opportunities.rst  bet_size.ipynb  bet_size.rst  betting.ipynb  index.rst  odds_conversion.ipynb  odds_conversion.rst  value_bets.ipynb  value_bets.rst
docs/changelog/: index.rst
docs/flow/: advanced.ipynb  basic_pipeline.ipynb  best_practices.ipynb  grouping_and_aggregating.ipynb  index.rst  inspection_interop.ipynb  introduction.ipynb
docs/fpl/: fpl.ipynb  index.rst
docs/implied/: implied.ipynb  implied.rst  index.rst
docs/install/: index.rst
docs/kelly/: index.rst
docs/matchflow/: advanced.ipynb  advanced.rst  basic_pipeline.ipynb  basic_pipeline.rst  best_practices.ipynb  best_practices.rst  file_io.ipynb  file_io.rst  grouping_and_aggregating.ipynb  grouping_and_aggregating.rst  helpers.ipynb  index.rst  inspection.ipynb  inspection.rst  inspection_interop.ipynb  introduction.ipynb  introduction.rst  opta.rst  optimizer.ipynb  optimizer.rst  parallel.ipynb  predicates.ipynb  predicates.rst  query.ipynb  query.rst  recipes.ipynb  schema.ipynb  schema.rst  statsbomb.ipynb  statsbomb.rst  why.ipynb  why.rst
docs/matchflow_recipes/: 01_xg_by_player.ipynb  02_shot_accuracy_by_team.ipynb  03_pass_map.ipynb  04_cumulative_xg_by_time.ipynb  05_touchmap.ipynb  06_statsbomb_api.ipynb  index.rst
docs/metrics/: briar.rst  ignorance.rst  ignorance_score.ipynb  index.rst  multiclass_briar.ipynb  rps.rst
docs/models/: bayesian.rst  bayesian_bivariate.ipynb  bayesian_hierarchical.ipynb  bayesian_random_intercept.ipynb  bayesian_skellam.ipynb  bivariate_poisson.ipynb  dixon_coles.ipynb  example.ipynb  football_prob_grid.ipynb  football_prob_grid.rst  goal_expectancy.ipynb  goal_expectancy.rst  index.rst  negative_binomial.ipynb  overview.ipynb  overview.rst  poisson.ipynb  rue_salvesen.ipynb  weibull_copula.ipynb  zero_inflated_poisson.ipynb
docs/ratings/: colley.rst  colley_ratings.ipynb  elo.rst  elo_ratings.ipynb  index.rst  massey.rst  massey_ratings.ipynb  pi.rst
docs/reference/: clubelo.rst  espn.rst  footballdata.rst  index.rst  understat.rst
docs/references/: index.rst
docs/roadmap/: index.rst
docs/scrapers/: clubelo.ipynb  espn.ipynb  fbref.ipynb  footballdata.ipynb  index.rst  understat.ipynb
docs/utilities/: index.rst
docs/viz/: index.rst  pitch.ipynb  pitch.rst  pitch_examples.ipynb
docs/xt/: index.rst
examples/: clubelo.com.ipynb  colley_ratings.ipynb  football-data.co.uk.ipynb  footballdata.ipynb  fpl.ipynb  implied_odds.ipynb  massey_ratings.ipynb  poisson.ipynb  rank_probability_scores.ipynb  rps.ipynb  understat.ipynb
examples/backtest/: backtest.ipynb
examples/fpl/: fpl.ipynb
examples/implied/: implied.ipynb
examples/metrics/: ignorance_score.ipynb  rps.ipynb
examples/models/: bayesian_bivariate.ipynb  bayesian_hierarchical.ipynb  bayesian_random_intercept.ipynb  bayesian_skellam.ipynb  bivariate_poisson.ipynb  dixon_coles.ipynb  goal_expectancy.ipynb  poisson.ipynb  rue_salvesen.ipynb  time_weighting.ipynb
examples/scrapers/: espn.ipynb  (+5 more)
penaltyblog/: __init__.py  data.py  rps.py  version.py
test/: conftest.py  test_arbitrage_edge_cases.py  test_arbitrage_lp.py  test_backtest.py  test_bayesian_burn.py  test_bayesian_goal_model.py  test_betting_advanced.py  test_clubelo.py  test_elo.py  test_flow.py  test_flow_cloud_storage.py  test_flow_edge_cases.py  test_flow_glob.py  test_flow_glob_cloud_storage.py  test_flow_helpers.py  test_flow_optimizer.py  test_flow_parallel.py  test_flow_query.py  test_flowgroup.py  test_football_probability_grid.py  test_footballdata.py  test_fpl.py  test_goal_expectancy.py  test_hierarchical_bayesian_goal_model.py  test_ignorance.py  test_implied.py  test_kelly_criterion.py  test_metrics_briar.py  test_metrics_rps.py  test_model_bayesian.py  test_model_bayesian_bivariate.py  test_model_bayesian_dixon_coles.py  test_model_bayesian_hierarchical.py  test_model_bayesian_random_intercept.py  test_model_bayesian_skellam.py  test_model_bivariate.py  test_model_dixon_coles.py  test_model_hierarchical.py  test_model_negaive_binomial.py  test_model_numba_helpers.py  (+35 more)
(+258 files in other folders)
