[tool.poetry]
name = "penaltyblog"
version = "0.4.0"
description = "Library from http://pena.lt/y/blog for scraping and modelling football (soccer) data"
authors = ["Martin Eastwood <martin.eastwood@gmx.com>"]
readme = "README.md"
license = "MIT"
include = [
    "LICENSE",
]
keywords = ["football", "soccer",  "goals", "modelling", "dixon coles", "poisson"]
repository = "https://github.com/martineastwood/penaltyblog"
homepage = "https://github.com/martineastwood/penaltyblog"


[tool.poetry.dependencies]
python = ">=3.8, <3.12"
pandas = "^1.4.3"
numpy = "^1.23.1"
scipy = "^1.9.0"
PuLP = "^2.6.0"
selenium = "^4.3.0"
webdriver-manager = "^3.8.3"
lxml = "^4.9.1"
cssselect = "^1.1.0"

[tool.poetry.dev-dependencies]
black = "^22.6.0"
Sphinx = "^5.1.1"
nbsphinx = "^0.8.9"
Pygments = "^2.12.0"
coverage = "^6.4.2"
pytest = "^7.1.2"
bumpversion = "^0.6.0"
numpydoc = "^1.4.0"
ipython = "^8.4.0"
sphinx-rtd-theme = "^1.0.0"
pre-commit = "^2.20.0"
coveralls = "^3.3.1"
jupyterlab = "^3.4.4"
jupyterlab-code-formatter = "^1.5.2"

[tool.coverage.paths]
source = ["penaltyblog", "*/site-packages"]

[tool.coverage.run]
branch = true
source = ["penaltyblog"]

[tool.coverage.report]
show_missing = true
ignore_errors = true

[tool.isort]
profile = "black"
src_paths = ["penaltyblog", "tests"]
include_trailing_comma = true
line_length = 79

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
