[project]
name = "penaltyblog"
version = "1.0.4"
description = "Library from http://pena.lt/y/blog for scraping and modelling football (soccer) data"
authors = [{ name = "Martin Eastwood", email = "martin.eastwood@gmx.com" }]
readme = "README.md"
license = { file = "LICENSE" }
keywords = [
    "football",
    "soccer",
    "goals",
    "modelling",
    "dixon coles",
    "poisson",
    "bayesian",
    "scraper",
    "scraping",
    "backtest",
]

requires-python = ">=3.10"

dependencies = [
    "beautifulsoup4==4.12.3,<5.0.0",
    "cmdstanpy==1.2.4,<2.0.0",
    "cssselect==1.2.0,<2.0.0",
    "lxml==5.3.0,<6.0.0",
    "html5lib==1.1,<2.0.0",
    "ipywidgets==8.1.5,<9.0.0",
    "numpy==2.1.3,<3.0.0",
    "pandas==2.2.3,<3.0.0",
    "PuLP==2.9.0,<3.0.0",
    "requests==2.32.3,<3.0.0",
    "scipy==1.14.1,<2.0.0",
    "tqdm==4.67.1,<5.0.0",
]

classifiers = [
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
]

[project.urls]
Homepage = "https://github.com/martineastwood/penaltyblog"
Repository = "https://github.com/martineastwood/penaltyblog"

[build-system]
requires = ["setuptools>=45", "wheel"]
build-backend = "setuptools.build_meta"

[tool.setuptools]
include-package-data = true

[tool.setuptools.package-data]
"penaltyblog.models" = ["stan_files/*.stan"]

[project.optional-dependencies]
dev = [
    "build",
    "black>=22.6.0",
    "Sphinx>=5.1.1",
    "nbsphinx>=0.8.9",
    "Pygments>=2.12.0",
    "coverage>=6.4.2",
    "pytest>=7.1.2",
    "numpydoc>=1.4.0",
    "ipython>=8.4.0",
    "sphinx-rtd-theme>=1.0.0",
    "pre-commit>=2.20.0",
    "coveralls>=3.3.1",
    "jupyterlab>=3.4.4",
    "jupyterlab-code-formatter>=1.5.2",
    "setuptools>=75.6.0",
]

[tool.coverage.paths]
source = ["penaltyblog", "*/site-packages"]

[tool.coverage.run]
branch = true
source = ["penaltyblog"]

[tool.coverage.report]
show_missing = true
ignore_errors = true

[tool.isort]
profile = "black"
src_paths = ["penaltyblog", "tests"]
include_trailing_comma = true
line_length = 79
