[project]
name = "penaltyblog"
version = "1.7.1"
description = "Football (soccer) Data & Modelling Made Easy"
authors = [{ name = "Martin Eastwood", email = "martin.eastwood@gmx.com" }]
readme = "README.md"
license = { file = "LICENSE" }
keywords = [
    "football",
    "soccer",
    "goals",
    "modelling",
    "dixon coles",
    "poisson",
    "scraper",
    "scraping",
    "backtest",
    "matchflow",
]

requires-python = ">=3.10"

dependencies = [
    "beautifulsoup4",
    "cssselect",
    "cython",
    "fsspec",
    "html5lib",
    "ipywidgets",
    "kaleido",
    "lxml",
    "matplotlib",
    "networkx",
    "numpy",
    "orjson",
    "pandas",
    "plotly",
    "pulp",
    "requests",
    "scipy",
    "socks",
    "statsbombpy",
    "tabulate",
    "tqdm",
]

classifiers = [
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
]

[project.urls]
Homepage = "https://github.com/martineastwood/penaltyblog"
Repository = "https://github.com/martineastwood/penaltyblog"

[build-system]
requires = ["setuptools", "wheel", "numpy", "Cython"]
build-backend = "setuptools.build_meta"

[tool.setuptools]
include-package-data = true

[tool.setuptools.package-data]
penaltyblog = [
    "models/*.so",
    "models/*.dll",
    "models/*.dylib",
    "metrics/*.so",
    "metrics/*.dll",
    "metrics/*.dylib",
]

[project.optional-dependencies]
dev = [
    "black>=22.6.0",
    "build",
    "coveralls>=3.3.1",
    "coverage>=6.4.2",
    "ipython>=8.4.0",
    "jupyterlab>=3.4.4",
    "jupyterlab-code-formatter>=1.5.2",
    "nbsphinx>=0.8.9",
    "numpydoc>=1.4.0",
    "pre-commit>=2.20.0",
    "Pygments>=2.12.0",
    "pytest>=7.1.2",
    "pytest-vcr",
    "setuptools>=75.6.0",
    "Sphinx>=5.1.1",
    "sphinx-rtd-theme>=1.0.0",
    "types-requests>=2.28.11",
    "vcrpy",
]

s3 = ["s3fs"]
gcs = ["gcsfs", "gcloud"]
azure = ["adlfs"]
cloud = ["s3fs", "gcsfs", "adlfs", "gcloud"]

[tool.coverage.paths]
source = ["penaltyblog", "*/site-packages"]

[tool.coverage.run]
branch = true
source = ["penaltyblog"]

[tool.coverage.report]
show_missing = true
ignore_errors = true

[tool.isort]
profile = "black"
src_paths = ["penaltyblog", "tests"]
include_trailing_comma = true
line_length = 79

[tool.ty.rules]
unresolved-import = "ignore"
